...

extension ViewController {
    
    func showAlertConfirmation(bears: String) {
    let alertController = UIAlertController(title: nil, message: "Confirm number of drinks (\(bears))?", preferredStyle: .alert)

        let confirmAction = UIAlertAction(title: "Confirm", style: .default) { (action) in
            self.presenter.addBears(numberOfBears: self.drinksToAddPicker.selectedRow(inComponent: 0) + 1)
        }
        alertController.addAction( confirmAction)
        alertController.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
        present(alertController, animated: true, completion: nil)
    }
...
