...
                    <constraints>
                        <constraint firstAttribute="height" constant="90" id="YkS-bG-NHD"/>
                    </constraints>
                </pickerView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y3E-a9-Ouw">
                    <rect key="frame" x="24" y="517" width="366" height="34"/>
                    <accessibility key="accessibilityConfiguration" identifier="addbtn"/>
                    <inset key="contentEdgeInsets" minX="0.0" minY="8" maxX="0.0" maxY="8"/>
                    <state key="normal" title="Add Beers"/>
                    <connections>
                        <action selector="addBearsAction:" destination="-1" eventType="touchUpInside" id="PeP-w5-I8s"/>
                    </connections>
                </button>
...
